@@ -1,9 +1,3 @@
 #!/bin/sh
 
-cd $HOME # avoid the loading directory as a dll bug
-
-MONO_PATH="@prefix@/lib/muine:$MONO_PATH"
-LD_LIBRARY_PATH="@prefix@/lib/muine:$LD_LIBRARY_PATH"
-export MONO_PATH LD_LIBRARY_PATH
-
 @MONO@ @MONO_FLAGS@ @prefix@/lib/muine/muine.exe "$@"
